# todo_sample-fastapi-enterprise

./: .gitattributes  .gitignore  CLAUDE.md  README.md  alembic.ini  create_db.py  kill-ports.bat  pyproject.toml  requirements.txt  setup-wsl-ports.ps1  start-project.bat  start-project.sh  test.db
.github/workflows/: ci.yml
.specstory/history/: 2025-05-16_02-04-このプロジェクトの起動方法は.md
app/: main.py
app/api/endpoints/: todo.py
app/api/schemas/: todo.py
app/core/: config.py
app/models/: todo.py
app/repositories/: todo_repository.py
app/services/: todo_service.py
docker/: docker-compose.yml
migrations/: env.py  script.py.mako
scripts/: migrate.sh
tests/: conftest.py  test_dummy.py  test_todo_api.py  test_todo_endpoints.py
todo-frontend/: package-lock.json  package.json
todo-frontend/app/: layout.tsx  page.tsx
todo-frontend/app/api/: todoApi.ts
todo-frontend/app/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo-frontend/app/types/: index.ts
