[tool.poetry]
name = "todo-sample-fastapi-enterprise"
version = "0.1.0"
description = ""
authors = ["Shuichi Kataoka <shu01k9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlmodel = "^0.0.24"
alembic = "^1.15.2"
pydantic = "^2.11.2"
pydantic-settings = "^2.8.1"
pytest = "^8.3.5"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
