[project]
name = "todo-sample-fastapi-enterprise"
version = "0.1.0"
description = ""
authors = [
    {name = "Shuichi Kataoka", email = "shu01k9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.15.2",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "fastapi-mcp>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
]
